@@ -1,5 +1,6 @@
 Version 5.9.26
-= Fixed a bug when __builtin_clz was applied to memory
+- Added __FLEX_MAJOR__, __FLEX_MINOR__, and __FLEX_REV__ macros
+- Fixed a bug when __builtin_clz was applied to memory
 - Improved performance of symbol resolution in sub-modules (some complicated code was so slow it seemed to hang)
 
 Version 5.9.25
